[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["yuhei_kajima <yuhei_kajima@nuco.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
openai = "^0.27.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
